cmake_minimum_required(VERSION 3.5)

get_filename_component(PROJECT_SELECTED_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" PROJECT_SELECTED_NAME ${PROJECT_SELECTED_NAME})
project(${PROJECT_SELECTED_NAME} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  set(CMAKE_CXX_FLAGS "-fsanitize=address -Wall -Wextra -Wpedantic -pedantic-errors -O2")
endif()

add_subdirectory(stbi)

file(GLOB HEADER_ONLY_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.hpp)
file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
file(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.h)

file(GLOB RESOURCE_FILES_1 ${CMAKE_CURRENT_SOURCE_DIR}/icon/*)
file(GLOB RESOURCE_FILES_2 ${CMAKE_CURRENT_SOURCE_DIR}/extra_font/*)
file(GLOB RESOURCE_FILES_3 ${CMAKE_CURRENT_SOURCE_DIR}/images/*)

file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/icon)
file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/extra_font)
file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/images)

file(COPY ${RESOURCE_FILES_1} DESTINATION ${PROJECT_BINARY_DIR}/icon)
file(COPY ${RESOURCE_FILES_2} DESTINATION ${PROJECT_BINARY_DIR}/extra_font)
file(COPY ${RESOURCE_FILES_3} DESTINATION ${PROJECT_BINARY_DIR}/images)

add_executable(${PROJECT_NAME} 
  ${HEADER_FILE_ONLY}
  ${SOURCE_FILES}
  ${HEADER_FILES}
)
target_link_libraries(${PROJECT_NAME} PRIVATE
 glfw GL GLU GLEW core::stbi::library
)
